samples/_failures_safe/1761641356_89e3a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba937b8a.c: In function ‘main’:
./samples/SAFE/__tmp_ba937b8a.c:155:12: error: missing terminating " character
  155 |     printf("Graph with 6 nodes
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ba937b8a.c:155:5: error: expected expression at end of input
  155 |     printf("Graph with 6 nodes
      |     ^~~~~~
./samples/SAFE/__tmp_ba937b8a.c:155:5: error: expected declaration or statement at end of input
